--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,40 @@ ENV/
 .ropeproject
 
 brill-tagger/.idea/
+
+.project
+.classpath
+*.iml
+
+*/.settings/*
+*/*/.settings/*
+*/*/*/.settings/*
+
+*/target/*
+*/*/target/*
+*/*/*/target/*
+
+*/dist/*
+*/*/dist/*
+*/*/*/dist/*
+
+*/build/*
+*/*/build/*
+*/*/*/build/*
+
+*/fina-web-old/*
+*/*/fina-web-old/*
+*/*/*/fina-web-old/*
+
+.idea/*
+*/.idea/*
+*/*/.idea/*
+*/*/*/.idea/*
+
+*/nbproject/private/*
+*/*/nbproject/private/*
+*/*/*/nbproject/private/*
+
+*/nbproject/jfx-impl_backup*.xml
+*/nbproject/UPDATED.TXT
+.settings/
